--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [user]
 name = 
-email = 
+email =
 
 [alias]
 
@@ -64,7 +64,7 @@ ft = "!f() { git describe --always --contains $1; }; f"
 fc = "!f() { git log --pretty=format:'%C(yellow)%h  %Cblue%ad  %Creset%s%Cgreen  [%cn] %Cred%d' --decorate --date=short -S$1; }; f"
 
 # Find commits by commit message
-fm = "!f() { git log --pretty=format:'%C(yellow)%h  %Cblue%ad  %Creset%s%Cgreen  [%cn] %Cred%d' --decorate --date=short --grep=$1; }; f"
+fm = "!f() { git log --pretty=format:'%C(yellow)%h  %Cgreen%ad  %Creset%s%C(cyan)  [%cn] %C(magenta)%d' --decorate --date=short --grep=$1; }; f"
 
 # Remove branches that have already been merged with master
 # a.k.a. ‘delete merged’
@@ -144,8 +144,8 @@ old = red           # deletions
 new = green         # additions
 
 [color "status"]
-added = yellow
-changed = green
+added = green
+changed = red
 untracked = cyan
 
 # URL shorthands
